2005-10-01  Kouhei Sutou  <kou@cozmixng.org>

	* setup.rb: update to 3.4.0.

2005-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb: change indentation style to
	  style of ruby-mode.el.

	* README: update dependencies.

	* packages/gtkcairo, packages/svgcairo: remove.

	* setup.rb: update to 3.3.1.

2005-09-29  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/extconf.rb: check modversion.
	* packages/svgcairo/ext/extconf.rb: ditto.

2005-09-13  Øyvind Kolås  <pippin@gimp.org>

	Patch from Kouhei Sutou

	* packages/cairo/ext:
	  - add (or rename) internal (static) functions to 'cr_XXX' prefix.
	  - XXX_v -> rb_XXX
	  - get_XXX -> XXX
	  - remove needless RUBY_METHOD_FUNC cast.
	  - call rb_obj_call_init() in new method.

	* packages/cairo/ext/rb_cairo_font_face.c
	  (rb_cairo_font_extents, rb_cairo_font_glyph_extents):
	  move to ...

	* packages/cairo/ext/rb_cairo_context.c:
	  - ... here.
	  - add some status checks.

	* packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo.h:
	  - rb_cairo_{from,to}_ruby_object ->
	    rb_cairo_context_{from,to}_ruby_object

	* packages/cairo/lib/cairo.rb: auto-generate XXX=.
	  (Cairo::Context#save: move to the C-side.

2005-09-10  Øyvind Kolås  <pippin@gimp.org>
	
	* AUTHORS: added Kouhei Sutou

2005-09-10  Øyvind Kolås  <pippin@gimp.org>

	Patch from Kouhei Sutou <kou@cozmixng.org>.

	Hiding free functions, cleanup of ruby <-> C conversion functions.
	
  	- rename ruby <-> C convert functions name.
	ruby -> C: rb_cairo_XXX_from_ruby_object().
    	C -> ruby: rb_cairo_XXX_to_ruby_object().
	
	- provide ruby <-> C convert macros.
	   ruby -> C: RVAL2CRXXX()
	   C -> ruby: CRXXX2RVAL()
	
  	- _SELF use RVAL2CRXXX()
  	- rb_cairo_XXX_from_ruby_object() uses rb_obj_is_kind_of()
	  instead of 'CLASS_OF() !=3D rb_cCairo_XXX'.
  	- add 'static' or remove free functions.

2005-09-09  Øyvind Kolås  <pippin@freedesktop.org>

	Missed a couple of files when applying the previous patch.
